# docs/swagger.yaml
@@ -116,20 +116,8 @@ definitions:
         type: integer
       coupon_code:
         type: string
-      delivery_charge:
-        type: integer
-      id:
-        type: integer
-      orderDate:
-        type: string
-      orderPrice:
-        type: integer
       payment_method:
         type: string
-      updateDate:
-        type: string
-      userID:
-        type: integer
     type: object
   handlers.editCategory:
     properties:
